<resources>
    <string name="app_name">" credit card application"</string>
    <string name="enter_card_balance">Enter Card Balance($)</string>
    <string name="enter_yearly_rate_of_interest">Enter Yearly Rate Of Interest(%)</string>
    <string name="enter_minimum_payment">Enter Minimum Payment($)</string>
    <string name="final_card_balance">Final Card Balance($)</string>
    <string name="months_remaining">Months Remaining</string>
    <string name="interest_paid_will_be">Interest Paid Will Be($)</string>
    <string name="Compute">Compute</string>
    <string name="clear">Clear</string>
</resources>
